--- a/packages/qiao-ui/src/pc/modal/modal.scss
+++ b/packages/qiao-ui/src/pc/modal/modal.scss
@@ -3,7 +3,7 @@
 $modalWidth : 800px;
 $modalHeight : 100px;
 
-.modal-contaier{
+.modal-container{
     position: fixed;
     top: 0;
     left: 0;
@@ -20,6 +20,7 @@ $modalHeight : 100px;
         @include base.marginAuto();
 
         margin-top: 100px;
+        padding: 40px;
         border-radius: 8px;
         background-color: #fff;
     }
@@ -35,4 +36,7 @@ $modalHeight : 100px;
         @include base.font($size: 24px, $align: center);
         @include base.cursor();
     }
+}
+.modal-container.hide{
+    display: none;
 }
