feat(qiao-ui): table td max width 100px

--- a/packages/qiao-ui/src/pc/table/table.scss
+++ b/packages/qiao-ui/src/pc/table/table.scss
@@ -33,6 +33,11 @@ $tdPadding: 5px;
         border: base.$borderSolid;
 
         @include base.font($size: 14px, $align: center);
+
+        max-width: 100px;
+        overflow:hidden;
+        white-space:nowrap;
+        text-overflow:ellipsis;
     }
 
     td.op>div {
