--- a/packages/qiao-ui/src/pc/header/header.scss
+++ b/packages/qiao-ui/src/pc/header/header.scss
@@ -1,10 +1,8 @@
 @use "../../base";
 
-$containerWidth: 1400px;
-
 $headerHeight: 60px;
 $logoWidth: 200px;
-$navsWidth: $containerWidth - $logoWidth;
+$navsWidth: calc(100% - $logoWidth);
 $navWidth: 100px;
 
 .nav-txt {
