--- a/packages/qiao-ui/src/pc/table/table.scss
+++ b/packages/qiao-ui/src/pc/table/table.scss
@@ -1,13 +1,11 @@
 @use "../../base";
 
-$tableWidth: 1100px;
 $tdHeight: 40px;
 $tdPadding: 5px;
 
 .table-container {
-    width: $tableWidth;
-
-    @include base.marginAuto();
+    width: calc(100% - 200px);
+    margin: 0 100px;
     margin-top: 20px;
 
     table {
@@ -34,6 +32,7 @@ $tdPadding: 5px;
 
         @include base.font($size: 14px, $align: center);
 
+        min-width: 100px;
         max-width: 100px;
         overflow:hidden;
         white-space:nowrap;
