--- a/packages/qiao-ui/src/pc/toolbar/toolbar.scss
+++ b/packages/qiao-ui/src/pc/toolbar/toolbar.scss
@@ -1,12 +1,11 @@
 @use "../../base";
 
-$toolbarWidth: 1100px;
 $toolbarHeight: 30px;
 
 .toolbar{
-    width: $toolbarWidth;
+    width: calc(100% - 200px);
     height: $toolbarHeight;
-    @include base.marginAuto();
+    margin: 0 100px;
     margin-top: 20px;
 
     div{
