--- a/packages/qiao-ui/src/pc/basic/link/link.scss
+++ b/packages/qiao-ui/src/pc/basic/link/link.scss
@@ -1,5 +1,18 @@
 @use "../../../base";
 
-.q-link {
-  @include base.alink();
+a.q-link:link {
+    color: #333;
+    text-decoration: none;
+}
+a.q-link:visited {
+    color: #333;
+    text-decoration: none;
+}
+a.q-link:hover {
+    color: #333;
+    text-decoration: none;
+}
+a.q-link:active {
+    color: #333;
+    text-decoration: none;
 }
