--- a/packages/qiao-ui/src/pc/component/modal/modal.scss
+++ b/packages/qiao-ui/src/pc/component/modal/modal.scss
@@ -17,6 +17,7 @@ $modalMaxHeight : 900px;
         position: relative;
         width: $modalWidth;
         min-height: $modalMinHeight;
+        max-height: calc(100% - 200px);
         overflow: auto;
 
         margin: 60px auto;
