feat(menus): add active url

--- a/packages/qiao-ui/src/pc/components/menus/menus.scss
+++ b/packages/qiao-ui/src/pc/components/menus/menus.scss
@@ -18,10 +18,7 @@ $menuHeight: 40px;
         @include base.font($align: center);
         @include base.cursor();
     }
-    .menu.main{
-        height: 50px;
-        font-size: 16px;
-        line-height: 50px;
-        border-bottom: base.$borderSolid;
+    .menu.active{
+        font-weight: 600;
     }
 }
