feat(qiao-z): listen

--- a/packages/qiao-z/__tests__/views/index.html
+++ b/packages/qiao-z/__tests__/views/index.html
@@ -13,6 +13,9 @@
     <p>app</p>
     <ul>
         <li>
+            <a href="/app/all" target="_blank">/app/all</a>
+        </li>
+        <li>
             <a href="/app/get" target="_blank">/app/get</a>
         </li>
         <li>
